* 2016-12-05 2.3.8
  add mode supportedoids
* 2016-12-03 2.3.7.1
  add LIEBERT-GP-PDU-MIB
* 2016-11-29 2.3.7
  add JUNIPER-MIB
* 2016-11-21 2.3.6
  add RMON-MIB
* 2016-10-24 2.3.5
  add Liebert-Mibs
* 2016-10-24 2.3.4
  fix host-resource-mib for mode supportedmibs
  add mode bulkwalk
  add NET-SNMP-MIB detector
* 2016-10-11 2.3.3.1
  bugfix in get_request, do not cache invalid responses
* 2016-10-08 2.3.3
  add CISCOSB*
  add ARISTA-ENTITY-SENSOR-MIB
  add ENTITY-STATE-MIB
* 2016-09-28 2.3.2.2
  update MANIFEST
* 2016-09-28 2.3.2.1
  fix WebGraph-Thermo-Hygro-Barometer-US-MIB id
* 2016-09-28 2.3.2
  add US_AN1GRAPH_BARO_MIB_134
* 2016-08-17 2.3.1
  add UCD-DISKIO-MIB
* 2016-08-12 2.3.0.2
  add extra-opts test
* 2016-08-01 2.3.0.1
  bugfix in valdiff with lookback
* 2016-07-21 2.3
  add --extra-opts
* 2016-07-12 2.2.01
  fix tests
* 2016-07-12 2.2
  add handling for --environment and --runas
* 2016-07-07 2.1.3
  add bulk_is_baeh for devices which don't like bulk requests
* 2016-06-29 2.1.2.2
  return metrics as string
* 2016-06-29 2.1.2.1
  bugfix in load_my_extension for old-style api
* 2016-06-20 2.1.2
  add mode encode to DB.pm
* 2016-06-16 2.1.1
  add DAMOCLES-MIB
* 2016-05-30 2.1
  warninx and criticalx can be regular expressions
* 2016-05-19 2.0.18
  add unitOnOff De. to Stulzmib
* 2016-05-12 2.0.17
  add mitigation-methods
  update CISCO-FIREWALL-MIB
* 2016-05-12 2.0.16
  add BIANCA-BRICK-MIBRES-MIB
  add BINTEC_FILESYS-MIB
  add unhex_octet_string()
* 2016-05-10 2.0.15
  bugfix in discover_suitable_class
* 2016-05-10 2.0.14
  add mib_ids to JUNIPER-IVE and UCD-SNMP Mibs
* 2016-04-19 2.0.13
  allow own handlers for set_timeout_alarm
* 2016-04-17 2.0.12
  add VRRP-MIB (dhoffend pullrequest #3)
* 2016-04-08 2.0.11
  escape special characters for statefiles under windows
* 2016-04-04 2.0.10
  improve the timeout handler
* 2016-04-04 2.0.9
  DB: add fetchall_array_cached
* 2016-03-29 2.0.8
  SNMP: add CISCO-STACKWISE-MIB
* 2016-03-11 2.0.7