@@ -1,0 +1,103 @@
+package Monitoring::GLPlugin::SNMP::MibsAndOids::LIEBERTGPFLEXIBLEMIB;
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::origin->{'LIEBERT-GP-FLEXIBLE-MIB'} = {
+  url => 'https://raw.githubusercontent.com/pgmillon/observium/master/mibs/liebert/LIEBERT-GP-FLEXIBLE-MIB',
+  name => 'LIEBERT-GP-FLEXIBLE-MIB',
+};
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::mib_ids->{'LIEBERT-GP-FLEXIBLE-MIB'} =
+    '1.3.6.1.4.1.476.1.42.3.9.10';
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::mibs_and_oids->{'LIEBERT-GP-FLEXIBLE-MIB'} = {
+  liebertGlobalProductsFlexibleModule => '1.3.6.1.4.1.476.1.42.1.10.1',
+  lgpFlexibleTableCount => '1.3.6.1.4.1.476.1.42.3.9.10',
+  lgpFlexibleBasicTable => '1.3.6.1.4.1.476.1.42.3.9.20',
+  lgpFlexibleBasicEntry => '1.3.6.1.4.1.476.1.42.3.9.20.1',
+  lgpFlexibleEntryIndex => '1.3.6.1.4.1.476.1.42.3.9.20.1.1',
+  lgpFlexibleEntryDataLabel => '1.3.6.1.4.1.476.1.42.3.9.20.1.10',
+  lgpFlexibleEntryValue => '1.3.6.1.4.1.476.1.42.3.9.20.1.20',
+  lgpFlexibleEntryUnitsOfMeasure => '1.3.6.1.4.1.476.1.42.3.9.20.1.30',
+  lgpFlexibleExtendedTable => '1.3.6.1.4.1.476.1.42.3.9.30',
+  lgpFlexibleExtendedEntry => '1.3.6.1.4.1.476.1.42.3.9.30.1',
+  lgpFlexibleEntryIntegerValue => '1.3.6.1.4.1.476.1.42.3.9.30.1.10',
+  lgpFlexibleEntryUnsignedIntegerValue => '1.3.6.1.4.1.476.1.42.3.9.30.1.20',
+  lgpFlexibleEntryDecimalPosition => '1.3.6.1.4.1.476.1.42.3.9.30.1.30',
+  lgpFlexibleEntryDataType => '1.3.6.1.4.1.476.1.42.3.9.30.1.40',
+  lgpFlexibleEntryDataTypeDefinition => 'LIEBERT-GP-FLEXIBLE-MIB::lgpFlexibleEntryDataType',
+  lgpFlexibleEntryAccessibility => '1.3.6.1.4.1.476.1.42.3.9.30.1.50',
+  lgpFlexibleEntryAccessibilityDefinition => 'LIEBERT-GP-FLEXIBLE-MIB::lgpFlexibleEntryAccessibility',
+  lgpFlexibleEntryUnitsOfMeasureEnum => '1.3.6.1.4.1.476.1.42.3.9.30.1.60',
+  lgpFlexibleEntryUnitsOfMeasureEnumDefinition => 'LIEBERT-GP-FLEXIBLE-MIB::lgpFlexibleEntryUnitsOfMeasureEnum',
+  lgpFlexibleEntryDataDescription => '1.3.6.1.4.1.476.1.42.3.9.30.1.70',
+};
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::definitions->{'LIEBERT-GP-FLEXIBLE-MIB'} = {
+  lgpFlexibleEntryDataType => {
+    '0' => 'not-specified',
+    '1' => 'int16',
+    '2' => 'uint16',
+    '3' => 'int32',
+    '4' => 'uint32',
+    '5' => 'text',
+    '6' => 'enum',
+    '7' => 'event16',
+    '8' => 'event32',
+    '9' => 'ipv4',
+    '10' => 'time32',
+  },
+  lgpFlexibleEntryUnitsOfMeasureEnum => {
+    '0' => 'not-specified',
+    '4096' => 'milliSeconds',
+    '4097' => 'seconds',
+    '4098' => 'minutes',
+    '4099' => 'hours',
+    '4100' => 'voltsAcRms',
+    '4101' => 'milliVoltsAcRms',
+    '4102' => 'voltsDc',
+    '4103' => 'milliVoltsDc',
+    '4104' => 'voltsPeak',
+    '4105' => 'voltsPeakToPeak',
+    '4106' => 'ampsAcRms',
+    '4107' => 'milliAmpsAcRms',
+    '4108' => 'ampsDc',
+    '4109' => 'milliAmpsDc',
+    '4110' => 'voltAmps',
+    '4111' => 'kiloVoltAmps',
+    '4112' => 'voltAmpsReactive',
+    '4113' => 'kVAReactive',
+    '4114' => 'watts',
+    '4115' => 'kiloWatts',
+    '4116' => 'wattHours',
+    '4117' => 'kiloWattHour',
+    '4118' => 'ampDcHours',
+    '4119' => 'hertz',
+    '4120' => 'milliHertz',
+    '4121' => 'kiloHertz',
+    '4122' => 'megaHertz',
+    '4123' => 'gigaHertz',
+    '4124' => 'percent',
+    '4125' => 'degC',
+    '4126' => 'degCDelta',
+    '4127' => 'degF',
+    '4128' => 'degFDelta',
+    '4129' => 'psi',
+    '4130' => 'pascal',
+    '4131' => 'psia',
+    '4132' => 'relativeHumidity',
+    '4133' => 'thd',
+    '4134' => 'days',
+    '4135' => 'phase',
+    '4136' => 'microOhms',
+    '4137' => 'milliOhms',
+    '4138' => 'ohms',
+    '4139' => 'kiloOhms',
+    '4140' => 'megaOhms',
+    '4141' => 'bars',
+  },
+  lgpFlexibleEntryAccessibility => {
+    '0' => 'not-specified',
+    '1' => 'readonly',
+    '2' => 'writeonly',
+    '3' => 'readwrite',
+  },
+};
