@@ -1,5 +1,6 @@
 * 2016-12-05 2.3.8
   add mode supportedoids
+  add LIEBERT-GP-FLEXIBLE-MIB 
 * 2016-12-03 2.3.7.1
   add LIEBERT-GP-PDU-MIB
 * 2016-11-29 2.3.7
